<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Oasis</string>

    <!--LoginActivity-->
    <string name="login_textview_email">Email</string>
    <string name="login_textview_password">Password</string>
    <string name="login_button_login">LOGIN</string>
    <string name="login_textview_create_account">No account yet? Register here.</string>
    <string name="login_button_forgot_password">FORGOT PASSWORD?</string>

    <!--RegAccountTypeActivity-->
    <string name="reg_account_type_textview_title">What account type?</string>
    <string name="reg_account_type_button_continue">Continue</string>
    <string name="reg_account_type_button_cancel">Cancel</string>

    <!--RegNameActivity-->
    <string name="reg_name_textview_title">What is your name?</string>
    <string name="reg_name_textview_name">NAME</string>
    <string name="reg_name_button_continue">Continue</string>
    <string name="reg_name_button_cancel">Cancel</string>

    <!--RegEmailActivity-->
    <string name="reg_email_textview_title">What is your email?</string>
    <string name="reg_email_textview_email">EMAIL</string>
    <string name="reg_email_button_continue">Continue</string>
    <string name="reg_email_button_cancel">Cancel</string>

    <!--RegPasswordActivity-->
    <string name="reg_password_textview_title">What is your password?</string>
    <string name="reg_password_textview_password">PASSWORD</string>
    <string name="reg_password_button_sign_up">Sign up!</string>
    <string name="reg_password_button_cancel">Cancel</string>

    <!--HomeActivity-->
    <string name="home_textview_title">User Profile</string>
    <string name="home_textview_name">NAME</string>
    <string name="home_textview_email">EMAIL</string>
    <string name="home_textview_account_type">ACCOUNT TYPE</string>

    <!--NewReportActivity-->
    <string name="new_report_textview_contaminant_ppm">Contaminant PPM</string>
    <string name="new_report_textview_water_type">Water Type</string>
    <string name="new_report_textview_water_condition">Water Condition</string>
    <string name="new_report_textview_title">Water Source Report</string>
    <string name="new_report_textview_location">Location</string>
    <string name="new_report_edittext_latitude">Latitude</string>
    <string name="new_report_edittext_longitude">Longitude</string>
    <string name="new_report_button_submit">Submit</string>

    <!--ReportDetailsActivity-->
    <string name="report_details_textview_report_number">Report Number: </string>
    <string name="report_details_textview_date">Date: </string>
    <string name="report_details_textview_location">Location: </string>
    <string name="report_details_textview_submitted_by">Submitted By: </string>

    <!--HistoricalReportParametersActivity-->
    <string name="historical_report_parameters_textview_title">Historical Report Settings</string>
    <string name="historical_report_parameters_textview_location">Location</string>
    <string name="historical_report_parameters_edittext_latitude">Latitude</string>
    <string name="historical_report_parameters_edittext_longitude">Longitude</string>
    <string name="historical_report_parameters_textview_ppm">Virus PPM/Contaminant PPM</string>
    <string name="historical_report_parameters_textview_year">Year</string>
    <string name="historical_report_parameters_button_submit">Submit</string>

    <!--HomeActivity Menu-->
    <string name="home_tab_new_report">New</string>
    <string name="home_tab_map">Map</string>
    <string name="home_tab_view_reports">View Reports</string>

    <!--ViewReportActivity Menu-->
    <string name="view_report_tab_all_reports">All Reports</string>
    <string name="view_report_tab_my_reports">My Reports</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="dbnode_source_reports">source_reports</string>
    <string name="dbnode_purity_reports">purity_reports</string>
    <string name="dbnode_count">count</string>
    <string name="dbnode_overall_count">overall_count</string>

    <!-- Google Maps API Key -->
    <string name="google_maps_key">INSERT_API_KEY</string>
</resources>